--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
                 <h1>When you are <span>Home Alone and </span>Hungry?</h1>
                 <p>The MeroKhajaGhar is the best website for explore new snacks and Recipe's of food and smoothies  it is very simple simple to use and the best way to find new with the help of us.</p>
                 <form>
-                    <input type="search" placeholder="Search foods"></input>
-                   <a class="search" href="#/"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <input type="text" id="searchInput" placeholder="Search food...">
+                    <a class="search" href="#/"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <div class="searchResultS"></div>
                 </form>
             </div>
             <div class="heroImage">
