--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
             <div class="textHero">
                 <h1>When you are <span>Home Alone and </span>Hungry?</h1>
                 <p>The MeroKhajaGhar is the best website for explore new snacks and Recipe's of food and smoothies  it is very simple simple to use and the best way to find new with the help of us.</p>
-                <form>
+                <form class="heroForm">
                     <input type="text" id="searchInput" placeholder="Search food...">
                     <a class="search" href="#/"><i class="fa-solid fa-magnifying-glass"></i></a>
-                    <div class="searchResultS"></div>
+                    <div id="searchResults"></div>
                 </form>
             </div>
             <div class="heroImage">
@@ -302,5 +302,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=URL"></script>
     <script defer src="index.js"></script>
+    <script src="search.js"></script>
 </body>
 </html>
